feat: adds auto refresh for permissions checker
